fix messages-item cropped on the left

--- a/wedding_invitation/app/static/styles/style.css
+++ b/wedding_invitation/app/static/styles/style.css
@@ -4799,3 +4799,7 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
 }
+
+.messages-item {
+  margin-left: 1.2rem;
+}
